3 files modified, 3 added

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -16,6 +16,12 @@
     Share
   </button>
 
+  <app-product-alerts
+  [product]="product"
+  (notify)="onNotify()">
+</app-product-alerts>
+
+
   <!--
     <h2>
       {{product.description}}
